@@ -938,6 +938,10 @@ enum e_SCREEN_GFX {
 #define PLAYER_RIGHT_TO_LEFT_DIFF 5
 #define PLAYER_LEFT_TO_RIGHT_DIFF 5
 
+#define TOP_STARS_LIMIT 65
+#define BOTTOM_STARS_LIMIT 175
+
+
 //#define SHOW_HITBOXES 1
 
 #endif // DEFINES_H
